<resources>
    <string name="app_name">ProjetoFinal</string>
    <string name="label_login_email">Email</string>
    <string name="label_login_password">Password</string>
    <string name="label_register_name">Name</string>
    <string name="label_btn_login_">Login</string>
    <string name="label_txt_register">Click here and create an account now</string>
    <string name="label_txt_title_register">Register</string>

</resources>